# stt-benchmark

./: .env.example  .gitignore  ARCHITECTURE.md  MODULE_DEPENDENCIES.md  README.md  REFACTORING_SUMMARY.md  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: normalization.json
reports/: stt_report.md  stt_report_normalized.md  stt_report_normalized_transcriptions.md
scripts/: convert_audio.sh
src/: __init__.py  config.py  llm_normalization.py  main.py  metrics.py  reporting.py  runner.py  test_discovery.py  test_models.py  transcription.py
tests/: test_metrics.py
