[project]
name = "stt-benchmark"
version = "0.1.0"
description = "Benchmark Azure OpenAI speech-to-text models with automated WER/latency reporting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg>=1.4",
    "jiwer>=4.0.0",
    "openai>=2.7.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "black>=24.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
